qiz264 - set navbar min width 300px to fix layout issue in IE and Firefox

--- a/src/app/core/navbar/navbar.component.css
+++ b/src/app/core/navbar/navbar.component.css
@@ -7,6 +7,7 @@
 
 .navbar {
   height: 50px;
+  min-width: 300px;
   background: rgba(0, 0, 0, 0.50);
 }
 
